--- a/Poker/.settings/org.eclipse.wst.common.component
+++ b/Poker/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
 	<wb-module deploy-name="Poker">
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/WEB-INF/config" source-path="/config"/>
         <wb-resource deploy-path="/" source-path="/WebContent"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/EndpointTests"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/Configuration"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/Source"/>
 		<property name="java-output-path" value="target/classes"/>
         <property name="context-root" value="poker"/>
 	</wb-module>
