--- a/Poker/.settings/org.eclipse.wst.common.component
+++ b/Poker/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,6 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/Configuration"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
 		<property name="java-output-path" value="target/classes"/>
-        <property name="context-root" value="poker"/>
+        <property name="context-root" value="Poker"/>
 	</wb-module>
 </project-modules>
