CNogosek: Local WAR settings.

--- a/Poker/.settings/org.eclipse.wst.common.component
+++ b/Poker/.settings/org.eclipse.wst.common.component
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Sandbox">
+    <wb-module deploy-name="Poker">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/conf"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/script"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/Scripts"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/Configuration"/>
-        <property name="context-root" value="Sandbox"/>
-        <property name="java-output-path" value="/Sandbox/build/classes"/>
+        <wb-resource deploy-path="/" source-path="/src"/>
+        <property name="context-root" value="Poker"/>
+        <property name="java-output-path" value="/Poker/build/classes"/>
     </wb-module>
 </project-modules>
